# RustyConnect4

./: README.md  Rocket.toml
backend/: Cargo.toml  Rocket.toml  User.txt
backend/src/: main.rs
frontend/: Cargo.toml  LICENSE_MIT  package-lock.json  style.scss
frontend/src/: H2PConnect4.rs  H2PTOOTOTTO.rs  ScoreBoard.rs  app.rs  canvas.rs  canvasHuman.rs  canvas_toot.rs  canvas_tootHuman.rs  connect4Computer.rs  connect4Human.rs  header.rs  history.rs  home - Copy (3).rs  home.rs  howToConnect4.rs  howToToot.rs  howToTootOtto.rs  lib.rs  scores.rs  sidebar.rs  tootOttoComputer.rs  tootOttoHuman.rs
frontend/src/routes/: mod.rs
frontend/static/: index.html
