[package]
name = "rusty-connect4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde= { version = "1.0", features = ["derive"] }
yew = "0.19.3"
yew-router = "0.16.0"
wasm-bindgen = "^0.2"
wee_alloc = "0.4.5"
wasm-logger = "0.2.0"
wasm-bindgen-futures = "0.4"
reqwasm = "0.2"
reqwest = { version = "0.11.10", features = ["json"] }

[lib]
crate-type = ["rlib", "cdylib"]