[package]
name = "rusty-connect4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde= { version = "1.0", features = ["derive"] }
yew = "0.19.3"
yew-router = "0.16.0"
wasm-bindgen = "^0.2"
wee_alloc = "0.4.5"
wasm-logger = "0.2.0"
wasm-bindgen-futures = "0.4"
reqwest = { version = "0.11.10", features = ["json"] }
chrono = { version = "0.4.19", features = ["serde", "wasmbind"] }
rand = "0.8.5"
web-sys = "0.3.57"
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["rlib", "cdylib"]