[package]
name = "rusty-connect4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde= { version = "1.0", features = ["derive"] }
yew = "0.19.3"
yew-router = "0.16.0"
yew-hooks = "0.1.42"
wasm-bindgen = "^0.2"
wee_alloc = "0.4.5"
wasm-logger = "0.2.0"
wasm-bindgen-futures = "0.4"
reqwest = { version = "0.11.10", features = ["json"] }
stdweb = "0.4.20"
log = "0.4.8"
chrono = { version = "0.4.19", features = ["serde", "wasmbind"] }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
itertools = "0.10.3"

[dependencies.web-sys]
version = "0.3.57"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'Window',
]

[lib]
crate-type = ["rlib", "cdylib"]